Region MVC added.

--- a/MvcPrimer/Views/Shared/_Layout.cshtml
+++ b/MvcPrimer/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Category", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Process", "List", "Process")</li>
+                    <li>@Html.ActionLink("Regions", "Index", "Region")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
